# il-revisore

./: .coverage  .flake8  .gitignore  .mcp.json  .mcp.production.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DEBUG_START_ENDPOINT.md  Dockerfile  GEMINI.md  README.md  REFACTOR_PLAN.md  STRUCTURE.md  TODO-BUG-FEATURE-REDESIGN.md  TODO-sandbox-isolation.md  TODO_OPERATION_WORKER.md  TODO_REFACTOR.md  TODO_REFACTOR_CHAT.md  TODO_TESTS.md  alembic.ini  docker-compose.yml  entrypoint.sh  evaluation_result.json  issue_detail_mockup.html  package-lock.json  pyproject.toml  revisore.py  test_claude_agents.py  test_gemini_vision.py  test_linear_create_issue.py  test_linear_creator_syntax.py  test_linear_issue_creator.py  test_start_endpoint.sh  token_calculator.py  turbowrap.db  turbowrap_legacy.py  tw.py
.gemini/: settings.json
.github/workflows/: deploy.yml  review.yml
.grok/: settings.json
.llms/: structure.xml
.mypy_cache/: missing_stubs
.mypy_cache/3.10/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _asyncio.data.json  _asyncio.meta.json  _bisect.data.json  _bisect.meta.json  _blake2.data.json  _blake2.meta.json  _bz2.data.json  _bz2.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _contextvars.data.json  _contextvars.meta.json  _ctypes.data.json  _ctypes.meta.json  _decimal.data.json  _decimal.meta.json  _frozen_importlib.data.json  _frozen_importlib.meta.json  _frozen_importlib_external.data.json  _frozen_importlib_external.meta.json  _hashlib.data.json  _hashlib.meta.json  _heapq.data.json  _heapq.meta.json  _io.data.json  _io.meta.json  _operator.data.json  _operator.meta.json  _pickle.data.json  _pickle.meta.json  _queue.data.json  _queue.meta.json  (+218 more)
agents/: analyst_func.md  cli_implementer.md  dev_be.md  dev_fe.md  engineering_principles.md  evaluator.md  fix_challenger.md  fix_clarifier.md  fix_clarify_planner.md  fix_planner.md  fixer.md  fixer_single.md  flash_analyzer.md  git_branch_creator.md  git_committer.md  git_merger.md  git_merger_gemini.md  infra_ops.md  linear_finalizer.md  linear_issue_analyzer.md  linear_question_generator.md  lint_fixer.md  linter_analyzer.md  orchestrator.md  re_fixer.md  readme_analyzer.md  reviewer_be.md  reviewer_be_architecture.md  reviewer_be_quality.md  reviewer_dedup_be.md  reviewer_dedup_fe.md  reviewer_fe.md  reviewer_fe_architecture.md  reviewer_fe_quality.md  test_analyzer.md  test_creator.md  test_discoverer.md  test_enhancer.md  test_runner.md  widget_chat_collector.md  (+2 more)
agents/legacy/: reviewer_be_legacy.md  reviewer_fe_legacy.md
agents/prompts/: screenshot_analysis.md
alembic/: env.py
alembic/versions/: 20251226_1005_1e870cf19a8b_initial_schema.py  20251226_1500_add_review_checkpoints.py  20251226_2105_f8e1cbdd9375_add_database_connections_table.py  20251227_add_allowed_extra_paths.py  20251227_add_chat_current_branch.py  20251227_add_claude_session_id.py  20251227_add_operations_table.py  20251227_add_repository_external_links.py  20251227_drop_orphan_helpdesk_tables.py  20251228_add_mockup_tables.py  20251228_add_parent_session_id.py  20251228_expand_operations_id.py  20251229_1125_b9cf6cb3a39a_add_bugs_and_features_tables.py  20251229_1642_8fe8b3ab3aa1_sync_all_issue_columns.py  20251229_2145_803355cc33a1_add_test_models.py  20251229_2310_ecfc633dff83_add_fix_score_fields.py  20251229_add_issue_is_viewed.py  20251229_add_mockup_status.py  20251230_0938_dd843afd43f7_add_repository_database_connections.py  20251230_1243_0b943bf06bfb_add_repo_test_analysis.py  20251230_1300_a07ccf0ac58c_add_test_suite_ai_analysis.py  20251230_1335_d2f6d64a678a_add_readme_analysis_to_repository.py  20251230_1530_add_test_suite_test_count.py  20251230_1700_add_live_view_screenshots.py  20251230_1825_f23f890d78ce_add_live_view_updated_at.py  20251230_1945_0c9706197704_add_mermaid_diagrams_table.py  20251231_1901_61e3b4f8806d_add_clarifications_to_issues.py  20251231_1957_02f7eb3341ce_add_fix_plan_to_issues.py  20260102_1200_add_rbac_users_tables.py  20260102_1717_7dfb5155efbc_add_source_field_to_endpoints.py  20260102_1730_update_endpoint_source_values.py  (+2 more)
commands/: backend.md  branch.md  commit.md  create-issue.md  create_test.md  deploy.md  format.md  frontend.md  help-error.md  lint.md  logs.md  merge.md  mockup.md  mockup_modify.md  modified.md  pr.md  refactor.md  review.md  test.md
config/: claude-settings.json  default.yaml
deploy/: aws-deploy.sh  user-data.sh
docs/: ARCHITECTURE.md  ARCH_REFACTORING_TODO.md  CHAT_CLI.md  CLI_CONFIGURATION.md  EC2_ACCESS.md  FILES_EDITOR.md  FIX_SYSTEM.md  ISSUE_SYSTEM.md  LIVE_VIEW.md  MOCKUP_SYSTEM.md  REVIEW_SYSTEM.md  TURBOWRAP_TEST.md
docs_llm/: SYSTEM_GUIDE.md
migrations/: 001_add_deleted_at_columns.sql  002_add_project_name.sql  003_add_fix_result_columns.sql  004_add_workload_estimation_columns.sql  005_add_fix_session_id.sql  006_add_workspace_path.sql  007_add_clarifications_column.sql  add_is_active_to_issues.sql  add_linear_integration.sql  migrate.sh
mockups/: agents_page.html  issue_detail_v2.html  issues_list_v2.html  operation-cards.html  session-info-modal.html
src/: STRUCTURE.md
terraform/: ec2.tf  outputs.tf  variables.tf
tests/: __init__.py  conftest.py  test_claude_cli.py  test_claude_cli_advanced.py  test_claude_cli_comprehensive.py  test_reviewers_utils.py
traefik/: traefik.yml
widget/: package-lock.json  package.json  vite.config.ts
(+4274 files in other folders)
